--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,6 @@
 [metadata]
+name = pytest-playwright-visual
+version = 1.0.0
 url = git+https://github.com/marcus320/pytest-playwright-visual.git
 [flake8]
 ignore =
